--- a/Hello-Again/Pages/Index.cshtml
+++ b/Hello-Again/Pages/Index.cshtml
@@ -6,5 +6,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">Hello Again</a>.</p>
+    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">Hello Again and again</a>.</p>
 </div>
